fix overflow issue on mobile

--- a/src/app/assets/css/components/hero.modules.css
+++ b/src/app/assets/css/components/hero.modules.css
@@ -1,6 +1,7 @@
 .section {
   padding-block: var(--section-vertical-spacing);
   position: relative;
+  overflow: hidden;
 }
 
 .section:not(.hero)::before {
